--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "mongodb": "^6.10.0",
     "mongoose": "^8.7.3",
     "next": "15.0.1",
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "qs": "^6.13.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/qs": "^6.9.16",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
